# wagtailhoneypot

./: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
wagtailhoneypot/: apps.py  forms.py  models.py  widgets.py
wagtailhoneypot/migrations/: 0001_initial.py
wagtailhoneypot/static/: hp_form.css  hp_form.js
wagtailhoneypot/templates/wagtailhoneypot/forms/widgets/: honeypot.html
