[metadata]
name = wagtailhoneypot
version = 1.0
description = A wagtail package built on top of Django-captcha to add some honeypot fields for wagtail form builder.
long_description = README.md
url = https://github.com/suchermon/wagtailhoneypot.git
author = Mon Sucher
author_email = supawaza@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
[flake8]
exclude = .git,.ropeproject,.venv,venv
ignore = E501
